--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "C:\\Users\\seanb\\.virtualenvs\\discordbot-W2f7LQqV\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\seanb\\.virtualenvs\\discordbot-gK44_TAM\\Scripts\\python.exe",
+    "python.linting.pylintEnabled": false,
+    "python.linting.pylamaEnabled": true,
+    "python.linting.enabled": true
 }
